Do not allow single quotes around Content-Type charset.

Do not allow single quotes around Content-Type charset parameter, in
compliance with RFC 7231 Section 3.1.1.1 ("quoted-string" is defined in
RFC 7230 Section 3.2.6).

Bug: 772350
Change-Id: Id8cf1676c49d086fce298285546561927ace057b
Reviewed-on: https://chromium-review.googlesource.com/705757
Commit-Queue: Bence Béky <bnc@chromium.org>
Reviewed-by: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507407}
Former-commit-id: 8c1e3076613621477eb18fca29e623be4b73c1a3